Modified LinFu.AOP interception routines to mark the instances that should be ignored during interception using the IgnoredInstanceRegistry

--- a/src/LinFu.AOP/LinFu.AOP.Cecil.csproj
+++ b/src/LinFu.AOP/LinFu.AOP.Cecil.csproj
@@ -75,6 +75,7 @@
     <Compile Include="Emitters\GetInterceptionDisabled.cs" />
     <Compile Include="Emitters\GetClassMethodReplacementProvider.cs" />
     <Compile Include="Extensions\FieldInterceptionExtensions.cs" />
+    <Compile Include="IgnoredInstancesRegistry.cs" />
     <Compile Include="Interfaces\IMethodBodyRewriterParameters.cs" />
     <Compile Include="NewOperatorInterception\ImplementActivatorHostWeaver.cs" />
     <Compile Include="FieldInterception\ImplementFieldInterceptionHostWeaver.cs" />
