Finished adding support for injecting named services into method/constructor parameters that have the same name as the named service instance

--- a/src/SampleLibrary/SampleLibrary.csproj
+++ b/src/SampleLibrary/SampleLibrary.csproj
@@ -72,6 +72,7 @@
     <Compile Include="IOC\SampleClassWithInjectionMethod.cs" />
     <Compile Include="IOC\SampleClassWithInjectionProperties.cs" />
     <Compile Include="IOC\SampleClassWithMultipleNonServiceArgumentConstructors.cs" />
+    <Compile Include="IOC\SampleClassWithNamedParameters.cs" />
     <Compile Include="IOC\SampleClassWithNonServiceArgument.cs" />
     <Compile Include="IOC\SampleClassWithServiceArrayAsConstructorArgument.cs" />
     <Compile Include="IOC\SampleClassWithUnmarkedInjectionProperties.cs" />
