--- a/src/SampleLibrary/SampleLibrary.csproj
+++ b/src/SampleLibrary/SampleLibrary.csproj
@@ -67,6 +67,7 @@
     <Compile Include="IOC\SampleAroundInvokeInterceptorClass.cs" />
     <Compile Include="IOC\SampleClassWithAdditionalArgument.cs" />
     <Compile Include="IOC\SampleClassWithArrayPropertyDependency.cs" />
+    <Compile Include="IOC\SampleClassWithFactoryDependency.cs" />
     <Compile Include="IOC\SampleClassWithGenericMethod.cs" />
     <Compile Include="IOC\SampleClassWithInjectionField.cs" />
     <Compile Include="IOC\SampleClassWithInjectionMethod.cs" />
