--- a/src/LinFu.AOP.Interfaces/LinFu.AOP.Interfaces.csproj
+++ b/src/LinFu.AOP.Interfaces/LinFu.AOP.Interfaces.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>9.0.30729</ProductVersion>
+    <ProductVersion>9.0.21022</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{0F8C48B0-4AE9-4429-AB90-C5141D710C2C}</ProjectGuid>
     <OutputType>Library</OutputType>
@@ -54,9 +54,13 @@
     <Compile Include="ActivatorExtensions.cs" />
     <Compile Include="AroundInvokeMethodCallRegistry.cs" />
     <Compile Include="AroundMethodBodyRegistry.cs" />
+    <Compile Include="BaseMethodReplacementProvider.cs" />
     <Compile Include="BootstrapException.cs" />
     <Compile Include="BootStrapRegistry.cs" />
+    <Compile Include="CallCounter.cs" />
     <Compile Include="CompositeAroundInvoke.cs" />
+    <Compile Include="Counter.cs" />
+    <Compile Include="CountingInterceptor.cs" />
     <Compile Include="ExceptionHandlerRegistry.cs" />
     <Compile Include="FieldInterceptionContext.cs" />
     <Compile Include="FieldInterceptorRegistry.cs" />
@@ -69,6 +73,7 @@
     <Compile Include="IAroundInvokeProvider.cs" />
     <Compile Include="IBeforeInvoke.cs" />
     <Compile Include="IBootStrappedComponent.cs" />
+    <Compile Include="ICallCounter.cs" />
     <Compile Include="IExceptionHandler.cs" />
     <Compile Include="IExceptionHandlerInfo.cs" />
     <Compile Include="IFieldInterceptionContext.cs" />
@@ -84,6 +89,9 @@
     <Compile Include="IModifiableType.cs" />
     <Compile Include="MethodBodyReplacementProviderRegistry.cs" />
     <Compile Include="MethodCallReplacementProviderRegistry.cs" />
+    <Compile Include="MultithreadedCallCounter.cs" />
+    <Compile Include="SimpleMethodReplacementProvider.cs" />
+    <Compile Include="SingleThreadedCallCounter.cs" />
     <Compile Include="TypeActivationContext.cs" />
     <Compile Include="TypeActivatorRegistry.cs" />
   </ItemGroup>
