Fixed a threading deadlock bug in the Initializer<T> class and fixed a bug that made the container return a default anonymous service type whenever an unresolved named service couldn't be found by the container

--- a/src/SampleLibrary/SampleLibrary.csproj
+++ b/src/SampleLibrary/SampleLibrary.csproj
@@ -60,8 +60,10 @@
     <Compile Include="AOP\SampleServiceImplementation.cs" />
     <Compile Include="AOP\SampleStaticClassWithStaticMethod.cs" />
     <Compile Include="AOP\SampleTypeActivator.cs" />
+    <Compile Include="IOC\BugFixes\IMyService.cs" />
     <Compile Include="IOC\BugFixes\MyClass.cs" />
     <Compile Include="IOC\BugFixes\MyFactory.cs" />
+    <Compile Include="IOC\BugFixes\MyService.cs" />
     <Compile Include="IOC\ISampleInterceptedInterface.cs" />
     <Compile Include="IOC\ISampleServiceOfT.cs" />
     <Compile Include="IOC\ISampleServiceWithGenericMethods.cs" />
