--- a/examples/LinFu.AOP.Samples/LinFu.AOP.MethodInterceptionSample/LinFu.AOP.MethodInterceptionSample.csproj
+++ b/examples/LinFu.AOP.Samples/LinFu.AOP.MethodInterceptionSample/LinFu.AOP.MethodInterceptionSample.csproj
@@ -51,22 +51,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LinFu.Core, Version=2.3.0.14903, Culture=neutral, PublicKeyToken=a4c63a184389506f, processorArchitecture=MSIL">
+    <Reference Include="LinFu.AOP.Interfaces, Version=2.3.0.42977, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\LinFu.Core.dll</HintPath>
+      <HintPath>..\lib\LinFu.AOP.Interfaces.dll</HintPath>
     </Reference>
     <Reference Include="System" />
-    <Reference Include="System.Core">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Xml.Linq">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data.DataSetExtensions">
-      <RequiredTargetFramework>3.5</RequiredTargetFramework>
-    </Reference>
-    <Reference Include="System.Data" />
-    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -77,9 +66,6 @@
       <Project>{40E585A8-2D84-45C9-8EE8-9600152D8D96}</Project>
       <Name>SampleLibrary</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="app.config" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
