--- a/src/LinFu.AOP/LinFu.AOP.Cecil.csproj
+++ b/src/LinFu.AOP/LinFu.AOP.Cecil.csproj
@@ -41,7 +41,9 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\lib\Mono.Cecil.dll</HintPath>
     </Reference>
-    <Reference Include="System" />
+    <Reference Include="System">
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
