--- a/src/UnitTests/App.config
+++ b/src/UnitTests/App.config
@@ -3,6 +3,6 @@
 <configuration>
   <appSettings>
     <add key="sdkDir" value="C:\Program Files\Microsoft Visual Studio 8\SDK\v2.0\bin" />
-    <add key="sdkDirUnderVista" value="C:\Program Files\Microsoft SDKs\Windows\v6.0A\Bin" />
+    <add key="sdkDirUnderVista" value="C:\Program Files\Microsoft SDKs\Windows\v7.1\Bin" />
   </appSettings>
 </configuration>
